версия для отката

--- a/pre_alfa-0.00.01/Bords&Controllers/PlayerCast/PlayerCast.storyboard
+++ b/pre_alfa-0.00.01/Bords&Controllers/PlayerCast/PlayerCast.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xOt-nf-Tzz">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xOt-nf-Tzz">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,11 +15,11 @@
             <objects>
                 <viewController id="xOt-nf-Tzz" customClass="PlayerCast" customModule="pre_alfa_0_00_01" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="f7f-tf-Gdp">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6o7-OI-1zL">
-                                <rect key="frame" x="480" y="239" width="55" height="30"/>
+                                <rect key="frame" x="255" y="239" width="55" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="55" id="cqq-L8-T8I"/>
                                     <constraint firstAttribute="height" constant="30" id="w08-VV-4Wc"/>
@@ -34,6 +38,14 @@
                                 <state key="normal" title="Player 1"/>
                                 <connections>
                                     <action selector="player1:" destination="xOt-nf-Tzz" eventType="touchUpInside" id="dGP-dX-ARD"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZtW-oa-b6Y">
+                                <rect key="frame" x="162" y="298" width="50" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Sashka"/>
+                                <connections>
+                                    <action selector="sashka:" destination="xOt-nf-Tzz" eventType="touchUpInside" id="d8b-aU-5Mt"/>
                                 </connections>
                             </button>
                         </subviews>
